--- a/portfolio.html
+++ b/portfolio.html
@@ -96,12 +96,20 @@
           <ul class="portfolio-list list">
             <li class="portfolio-post">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio1.jpg"
-                  alt="фото веб-сайта на компьютере"
-                  width="370"
-                  height="295"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    src="./images/portfolio1.jpg"
+                    alt="фото веб-сайта на компьютере"
+                    width="370"
+                    height="295"
+                  />
+                  <p class="portfolio-hover-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+
                 <div class="portfolio-cont">
                   <h3 class="portfolio-name">Технокряк</h3>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -111,12 +119,21 @@
 
             <li class="portfolio-post">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio2.jpg"
-                  alt="дизайн постера к матчу по баскетболу"
-                  width="370"
-                  height="295"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    src="./images/portfolio2.jpg"
+                    alt="дизайн постера к матчу по баскетболу"
+                    width="370"
+                    height="295"
+                  />
+                  <p class="portfolio-hover-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quibusdam ea, corrupti tempora quod doloremque sunt
+                    reiciendis! Ad mollitia est iusto nemo vero quas, distinctio
+                    at optio non. Aspernatur, praesentium ab.
+                  </p>
+                </div>
+
                 <div class="portfolio-cont">
                   <h3 class="portfolio-name">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -128,12 +145,21 @@
 
             <li class="portfolio-post">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio3.jpg"
-                  alt="логотип приложения"
-                  width="370"
-                  height="295"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    src="./images/portfolio3.jpg"
+                    alt="логотип приложения"
+                    width="370"
+                    height="295"
+                  />
+                  <p class="portfolio-hover-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quibusdam ea, corrupti tempora quod doloremque sunt
+                    reiciendis! Ad mollitia est iusto nemo vero quas, distinctio
+                    at optio non. Aspernatur, praesentium ab.
+                  </p>
+                </div>
+
                 <div class="portfolio-cont">
                   <h3 class="portfolio-name">
                     Ресторан <span lang="en">Seafood</span>
@@ -145,12 +171,21 @@
 
             <li class="portfolio-post">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio4.jpg"
-                  alt="логотип проекта"
-                  width="370"
-                  height="295"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    src="./images/portfolio4.jpg"
+                    alt="логотип проекта"
+                    width="370"
+                    height="295"
+                  />
+                  <p class="portfolio-hover-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quibusdam ea, corrupti tempora quod doloremque sunt
+                    reiciendis! Ad mollitia est iusto nemo vero quas, distinctio
+                    at optio non. Aspernatur, praesentium ab.
+                  </p>
+                </div>
+
                 <div class="portfolio-cont">
                   <h3 class="portfolio-name">
                     Проект <span lang="en">Prime</span>
@@ -162,12 +197,21 @@
 
             <li class="portfolio-post">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio5.jpg"
-                  alt="логотип приложения"
-                  width="370"
-                  height="295"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    src="./images/portfolio5.jpg"
+                    alt="логотип приложения"
+                    width="370"
+                    height="295"
+                  />
+                  <p class="portfolio-hover-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quibusdam ea, corrupti tempora quod doloremque sunt
+                    reiciendis! Ad mollitia est iusto nemo vero quas, distinctio
+                    at optio non. Aspernatur, praesentium ab.
+                  </p>
+                </div>
+
                 <div class="portfolio-cont">
                   <h3 class="portfolio-name">
                     Проект <span lang="en">Boxes</span>
@@ -179,12 +223,21 @@
 
             <li class="portfolio-post">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio6.jpg"
-                  alt="фото веб-сайта на компьютере"
-                  width="370"
-                  height="295"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    src="./images/portfolio6.jpg"
+                    alt="фото веб-сайта на компьютере"
+                    width="370"
+                    height="295"
+                  />
+                  <p class="portfolio-hover-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quibusdam ea, corrupti tempora quod doloremque sunt
+                    reiciendis! Ad mollitia est iusto nemo vero quas, distinctio
+                    at optio non. Aspernatur, praesentium ab.
+                  </p>
+                </div>
+
                 <div class="portfolio-cont">
                   <h3 class="portfolio-name" lang="en">
                     Inspiration has no Borders
@@ -196,12 +249,21 @@
 
             <li class="portfolio-post">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio7.jpg"
-                  alt="фото дизайна книги"
-                  width="370"
-                  height="295"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    src="./images/portfolio7.jpg"
+                    alt="фото дизайна книги"
+                    width="370"
+                    height="295"
+                  />
+                  <p class="portfolio-hover-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quibusdam ea, corrupti tempora quod doloremque sunt
+                    reiciendis! Ad mollitia est iusto nemo vero quas, distinctio
+                    at optio non. Aspernatur, praesentium ab.
+                  </p>
+                </div>
+
                 <div class="portfolio-cont">
                   <h3 class="portfolio-name">
                     Издание <span lang="en">Limited Edition</span>
@@ -213,12 +275,21 @@
 
             <li class="portfolio-post">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio8.jpg"
-                  alt="логотип проекта"
-                  width="370"
-                  height="295"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    src="./images/portfolio8.jpg"
+                    alt="логотип проекта"
+                    width="370"
+                    height="295"
+                  />
+                  <p class="portfolio-hover-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quibusdam ea, corrupti tempora quod doloremque sunt
+                    reiciendis! Ad mollitia est iusto nemo vero quas, distinctio
+                    at optio non. Aspernatur, praesentium ab.
+                  </p>
+                </div>
+
                 <div class="portfolio-cont">
                   <h3 class="portfolio-name">
                     Проект <span lang="en">LAB</span>
@@ -230,12 +301,21 @@
 
             <li class="portfolio-post">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio9.jpg"
-                  alt="фото приложения на ноутбуке"
-                  width="370"
-                  height="295"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    src="./images/portfolio9.jpg"
+                    alt="фото приложения на ноутбуке"
+                    width="370"
+                    height="295"
+                  />
+                  <p class="portfolio-hover-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quibusdam ea, corrupti tempora quod doloremque sunt
+                    reiciendis! Ad mollitia est iusto nemo vero quas, distinctio
+                    at optio non. Aspernatur, praesentium ab.
+                  </p>
+                </div>
+
                 <div class="portfolio-cont">
                   <h3 class="portfolio-name" lang="en">Growing Business</h3>
                   <p class="portfolio-text">Приложение</p>
@@ -317,5 +397,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
